--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "1.0.3",
   "description": "Small useful HOCs based on recompose.",
   "main": "build/cjs.js",
+  "repository": {
+    "url": "https://github.com/roadhump/hocs.git"
+  },
   "scripts": {
     "test": "BABEL_ENV=cjs jest",
     "build": "rollup -c",
-    "prepublish": "npm run test && npm run build"
+    "lint": "eslint src *.js",
+    "prepublish": "npm run lint && npm run test && npm run build",
+    "precommit": "npm run lint && npm run test && npm run build"
   },
   "keywords": [],
   "author": "Aliaksei Shytkin <e79eas@gmail.com>",
@@ -20,7 +25,14 @@
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "husky": "^0.14.3",
     "jest": "^22.4.2",
+    "lint-staged": "^7.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "rollup": "^0.56.3",
